# cotlog

./: .gitignore  CLAIMCHECK.md  CLAIMCHECK_DEV.md  CLAIMCHECK_FOLIO.md  DESIGN.md  FOLIO_REPORT.md  README.md  REFINE.md  folio_review.txt  pyproject.toml  review.txt
examples/: refine-examples.jsonl  refine_demo.py
results/: FOLIO_EVIDENCE.jsonl  claimcheck_20260311_155650.jsonl  claimcheck_20260311_155837.jsonl  claimcheck_gold_20260311_160310.jsonl  claimcheck_gold_20260311_161128.jsonl  claimcheck_gold_20260311_223247.jsonl  claimcheck_gold_20260311_230659.jsonl  claimcheck_gold_20260406_140554.jsonl  claimcheck_gold_20260406_145246.jsonl  cot_20260228_160249.jsonl  cot_20260228_160249.txt  cot_20260228_161050.jsonl  cot_20260228_161050.txt  cot_20260228_161748.jsonl  cot_20260228_161748.txt  cot_20260228_162023.jsonl  cot_20260228_162023.txt  cot_20260228_163830.jsonl  cot_20260228_163830.txt  cot_20260228_164309.jsonl  cot_20260228_164309.txt  refine_20260311_012944.jsonl  refine_20260311_012944.txt  refine_20260311_015442.jsonl  refine_20260311_015442.txt
scripts/: download_folio_v2.py  generate_evidence.py  verify_evidence.py
src/cotlog/: __init__.py  __main__.py  claimcheck.py  cot.py  cot_verify.py  eval.py  fol_gen.py  fol_parser.py  folio.py  llm.py  prover.py  refine.py  tptp.py
tests/: test_cot_verify.py  test_fol_gen.py  test_fol_parser.py  test_prover.py  test_tptp.py
