[project]
name = "cotlog"
version = "0.1.0"
description = "FOL Chain-of-Thought Verification"
readme = "README.md"
authors = [
    { name = "Nada Amin", email = "namin@alum.mit.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "anthropic[bedrock]>=0.52.0",
    "datasets>=4.7.0",
    "huggingface-hub>=0.20",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
